--- a/signin.css
+++ b/signin.css
@@ -20,7 +20,7 @@ input, textarea{
 }
 	
 input[type=text]{
-	/*width: 100%;*/
+	position: relative;
 	display:inline-block;
 	padding: 12px 12px;
 	margin: 10px 0;
