--- a/signin.css
+++ b/signin.css
@@ -14,6 +14,7 @@ h1{
 }
 	
 input, textarea{
+	position:relative;
 	font-size: 20px;
 	font-family: Arial, Helvetica, sans-serif;
 	background: rgba(202, 250, 249,0.7)
@@ -28,7 +29,7 @@ input[type=text]{
 }
 
 input[type=email]{
-	/*width: 100%;*/
+	position:relative;
 	display:inline-block;
 	padding: 12px 12px;
 	margin: 10px 23px;
@@ -36,6 +37,7 @@ input[type=email]{
 }
 
 input[type=password]{
+	position: relative;
 	display: inline-block;
 	padding: 12px 12px;
 	margin: 10px 10px;
