--- a/signin.css
+++ b/signin.css
@@ -31,7 +31,7 @@ input[type=text]{
 input[type=email]{
 	position:relative;
 	display:inline-block;
-	padding: 12px 12px;
+	padding: 12px;
 	margin: 10px 23px;
 	box-sizing: border-box;
 }
