--- a/style.css
+++ b/style.css
@@ -1,51 +1,121 @@
 body{
-	background-image:url('cofee.jpg');
+	background-image:url('yello.jpg');
 	background-repeat:no-repeat;
-	/*height:100%;
-	width:100%;*/
 	background-size:cover;
+	position: relative;
+}
+h3{
+	text-decoration:underline;
 }
 
 .collapse{
-	--font-size:20px;
+	font-size:15px;
 	font-family:courier;
-	color:black
-}
-
-.container-fluid{
-	font-size:20px;
 	color:black;
 }
-.navbar-brand{
-	font-size:30px;
+.collapse li{
+	font-size:22px; 
 	font-family:verdana;
-	color:black;
 }
 
 .nav{
 	font-size:20px;
 	color:black;
 }
-.jumbotron{
-	text-align:center;
-	font-size:20px;
-	--padding-bottom:45px;
-	margin-top:60px;
-	background: linear-gradient(to left, #66ff99 0%, #0099ff 100%);
+
+.nav li{
+	color:black;
+	font-size:22px; 
+	font-family:verdana
 }
-p{
-	background-color: rgba(245, 112, 103,0.8);
-	color: white;
-	display: inline-block;
-	margin-left: 1%;
+.container-fluid{
+	font-size:20px;
+	color:black;
+}
+.navbar-brand{
+	font-size:25px;
 	font-family:verdana;
-	font-size: 26px;
-	padding: 5px 8px;
+	color:black;
+}
+
+.navbar-brand hover:{
+	background-color: grey;
+}
+
+.jumbotron{
+	text-align:left;
+	font-size:20px;
+	color: #ff005c;
+	--padding-bottom:45px;
+	background: none;
+}
+
+.frames{
+	text-decoration: underline;
+}
+#pict{
+	width: 300px;
+	height: 250px;
 	position: relative;
-	text-align: center;
+	left: 74%;
+	bottom: 50%;
+}
+
+#pict1{
+	width: 300px;
+	height: 250px;
+	position:relative;
+	left: 22%;
+	bottom: 50%;
+}
+
+#pict2{
+	width: 300px;
+	height: 250px;
+	position: relative;
+	top: 40%;
+	right: 47%;
+}
+
+#pict3{
+	width: 300px;
+	height: 250px;
+	position: relative;
+	top: 40%;
+	right: 47%;
+}
+
+.para{
+	position: relative;
+	bottom: 50%;
+	display: block;
+	left: 2.7%;
+	font-size: 20px;
+	color: #ca8a8b;
+}
+.para ul{
+	text-decoration: underline; 	
+	position: relative;
+	right: 2%;
+}
+#pa1{
+	color: black;
+	display: inline-block;
+	font-family:verdana;
+	font-size: 7px;
+	position: relative;
+	left: 2%;
+	top: 11%;
 }
 
 .p{
 	font-family: verdana;
 	opacity: 2;
+}
+
+.navbar{
+	background-color: rgb(173, 235, 173,.8);
+}
+.navber{
+	background-color: rgb(173, 235, 173,.8);
 }
